src/assets/content-section.scss
section {
    @apply flex flex-col justify-center items-center
}

.content-wrapper {
    min-height: 100svh;
    scroll-margin-top: 60px;
    
    @apply flex justify-center items-center p-5 w-full scroll-smooth relative snap-start;

    &:last-child {
        @apply pt-16;
    }
}

.content {
    @apply max-w-screen-md w-full min-h-screen h-max overflow-hidden flex flex-col justify-center;

    @apply xl:max-w-screen-lg;
}

.title {
    @apply text-green-accent font-semibold mb-5 uppercase relative text-xl;

    &:after {
        content: '';
        position: absolute;
        @apply bg-green-accent w-10 h-[2px] top-[48%] bottom-0 ml-2;
    }
}

p {
    @apply mb-5;
}

span {
    @apply font-semibold;
}

a {
    @apply text-green-accent;

    svg {
        @apply w-[15px] h-[15px]
    }
}

